--- a/resume-styles.css
+++ b/resume-styles.css
@@ -5,10 +5,29 @@ body {
     line-height: 1.6;
 }
 
+img {
+    width: 10%;
+    border-radius: calc(#000000 * 2);
+    border: 5px solid #000000;
+}
+
+a {
+    color: #000000;
+}
+
+a:hover {
+    color: #fd0202;
+    text-decoration: none;
+    background-color: whitesmoke;
+    color: #222222;
+    border-radius: 5px;
+    padding: 5px;
+}
+
 header {
     background: #333;
     color: #fff;
-    padding: 10px 20px;
+    padding: 5px 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
